--- a/.eslintrc
+++ b/.eslintrc
@@ -1,20 +1,8 @@
 {
   "root": true,
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": { 
-      "ecmaVersion": 2020, 
-      "sourceType": "module" 
-    },
-  "plugins": [
-      "@typescript-eslint"
-    ],
-  "extends": [
-      "eslint:recommended", 
-      "plugin:@typescript-eslint/recommended",
-      "prettier"
-    ],
-  "rules": {
-    "semi": ["error", "always"],
-    "quotes": ["error", "double"]
+  "extends": "airbnb-typescript/base",
+  "plugins": ["import","prettier"],
+  "parserOptions": {
+    "project": "./tsconfig.eslint.json"
   }
 }
