--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,20 @@
 {
   "root": true,
-  "extends": "airbnb-typescript/base",
-  "plugins": ["import","prettier"],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": "./tsconfig.eslint.json"
+  },
+  "plugins": [
+    "import",
+    "prettier"
+  ],
+  "extends": [
+    "airbnb-base",
+    "airbnb-typescript/base",
+    "prettier"
+  ],
+  "rules": {
+    "semi": ["error", "always"],
+    "quotes": ["error", "double"]
   }
 }
