--- a/app-config.json
+++ b/app-config.json
@@ -1,8 +1,8 @@
 {
-    "PORT" : "3000",
+    "PORT" : "8080",
     "HOST" : "localhost",
     "NODE_ENV": "development",
-    "DB_NAME": "",
+    "DB_NAME": "bank_db",
     "SQL_PORT": "3306",
     "SQL_USER": "root",
     "SQL_PASSWORD": "qwerty",
