--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "eslint src/**/*.ts",
     "format": "prettier src/**/*.ts --write",
     "prepare": "husky install",
-    "test": "mocha",
+    "test": "mocha tests/**/*.spec.ts",
+    "t1":"mocha tests/services/businessAccount.service.spec.ts",
+    "t2":"mocha tests/validations/validator.spec.ts",
     "coverage": "rm -rf coverage && nyc report",
     "perf-tsc": "tsc --extendedDiagnostics"
   },
@@ -58,6 +60,8 @@
   },
   "dependencies": {
     "@ajar/marker": "^1.3.2",
+    "@types/pubsub-js": "^1.8.3",
+    "@types/sinon": "^10.0.11",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^15.0.0",
@@ -65,6 +69,8 @@
     "jsonwebtoken": "^8.5.1",
     "ms": "^2.1.3",
     "mysql2": "^2.3.3",
+    "pubsub-js": "^1.9.4",
+    "sinon": "^13.0.1",
     "uuid": "^3.4.0"
   },
   "name": "final-project",
