--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "format": "prettier src/**/*.ts --write",
     "prepare": "husky install",
     "test": "mocha tests/**/*.spec.ts",
-    "t1":"mocha tests/services/businessAccount.service.spec.ts",
-    "t2":"mocha tests/validations/validator.spec.ts",
+    "t1": "mocha tests/services/businessAccount.service.spec.ts",
+    "t2": "mocha tests/validations/validator.spec.ts",
     "coverage": "rm -rf coverage && nyc report",
     "perf-tsc": "tsc --extendedDiagnostics"
   },
@@ -40,6 +40,7 @@
     "@types/mocha": "^9.0.0",
     "@types/ms": "^0.7.31",
     "@types/node": "^16.11.13",
+    "@types/sinon": "^10.0.11",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
