--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "jsonwebtoken": "^8.5.1",
     "ms": "^2.1.3",
     "mysql2": "^2.3.3",
+    "node-fetch": "^3.2.0",
     "pubsub-js": "^1.9.4",
     "sinon": "^13.0.1",
     "uuid": "^3.4.0"
