--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "format": "prettier src/**/*.ts --write",
     "prepare": "husky install",
     "test": "mocha tests/**/*.spec.ts",
-    "t1":"mocha tests/services/businessAccount.service.spec.ts",
-    "t2":"mocha tests/validations/validator.spec.ts",
-    "t3":"mocha tests/services/inividualAccount.service.spec.ts",
-    "t4":"mocha tests/services/familyAccount.service.spec.ts",
+    "t1": "mocha tests/services/businessAccount.service.spec.ts",
+    "t2": "mocha tests/validations/validator.spec.ts",
+    "t3": "mocha tests/services/inividualAccount.service.spec.ts",
+    "t4": "mocha tests/services/familyAccount.service.spec.ts",
+    "t5": "mocha tests/validations/account.validator.spec.ts",
     "coverage": "rm -rf coverage && nyc report",
     "perf-tsc": "tsc --extendedDiagnostics"
   },
