--- a/package.json
+++ b/package.json
@@ -4,21 +4,15 @@
   "type": "module",
   "scripts": {
     "build": "npm run clean && tsc && swc src -d dist",
-    "clean": "rm -rf typings && rm -rf dist",
-    "build-dev": "npm run build && node dist/index.js",
-    "dev": "nodemon",
+    "clean": "del -rf typings && del -rf dist",
+    "dev": "npm run build && node dist/index.js",
+    "nodemon": "nodemon",
     "start": "NODE_ENV=production node dist/index.js",
     "lint": "eslint src/**/*.ts",
     "format": "prettier src/**/*.ts --write",
     "prepare": "husky install",
     "test": "mocha tests/**/*.spec.ts",
-    "test-ba": "mocha tests/services/businessAccount.service.spec.ts",
-    "test-v": "mocha tests/validations/validator.spec.ts",
-    "test-ia": "mocha tests/services/inividualAccount.service.spec.ts",
-    "test-fa": "mocha tests/services/familyAccount.service.spec.ts",
-    "test-va": "mocha tests/validations/account.validator.spec.ts",
-    "test-a": "mocha tests/services/account.service.spec.ts",
-    "coverage": "rm -rf coverage && nyc report",
+    "coverage": "del -rf coverage && nyc report",
     "perf-tsc": "tsc --extendedDiagnostics"
   },
   "keywords": [
@@ -64,7 +58,6 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@ajar/marker": "^1.3.2",
     "@types/nodemailer": "^6.4.4",
     "@types/pubsub-js": "^1.8.3",
     "@types/sinon": "^10.0.11",
@@ -79,17 +72,12 @@
     "nodemailer": "^6.7.2",
     "pubsub-js": "^1.9.4",
     "sinon": "^13.0.1",
+    "@ajar/marker": "^1.3.2",
     "uuid": "^3.4.0"
   },
-  "name": "final-project",
+  "name": "aviv-server-template",
   "description": "",
   "directories": {
     "test": "tests"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://Avivzaf@bitbucket.org/avivzaf/final-project.git"
-  },
-  "author": "",
-  "homepage": "https://bitbucket.org/avivzaf/final-project#readme"
+  }
 }
