--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "type": "module",
   "scripts": {
     "build": "npm run clean && tsc && swc src -d dist",
-    "clean": "del -rf typings && del -rf dist",
+    "clean": "rmdir /s /q typings && rmdir /s /q dist",
     "dev": "npm run build && node dist/index.js",
     "nodemon": "nodemon",
-    "start": "NODE_ENV=production node dist/index.js",
+    "start": "node dist/index.js",
     "lint": "eslint src/**/*.ts",
     "format": "prettier src/**/*.ts --write",
     "prepare": "husky install",
@@ -40,6 +40,7 @@
     "@types/node": "^16.11.13",
     "@types/sinon": "^10.0.11",
     "@types/uuid": "^8.3.4",
+    "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "chai": "^4.3.4",
@@ -58,6 +59,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@ajar/marker": "^1.3.2",
     "@types/nodemailer": "^6.4.4",
     "@types/pubsub-js": "^1.8.3",
     "@types/sinon": "^10.0.11",
@@ -72,8 +74,8 @@
     "nodemailer": "^6.7.2",
     "pubsub-js": "^1.9.4",
     "sinon": "^13.0.1",
-    "@ajar/marker": "^1.3.2",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "validator": "^13.7.0"
   },
   "name": "aviv-server-template",
   "description": "",
