--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,15 @@
 {
   "compilerOptions": {
-    "target": "es2020",                                 
-    "module": "es2020", 
-    "moduleResolution": "node",                                                   
-    "allowSyntheticDefaultImports": true,             
-    "esModuleInterop": true,                                                            
-    "strict": true,                                     
+    "target": "es2020",
+    "module": "es2020",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "strict": true,
     "skipLibCheck": true,
     "declaration": true,
     "emitDeclarationOnly": true,
-    "declarationDir": "./typings",                              
+    "declarationDir": "./typings",
+    "sourceMap": true
   },
 }
