--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "build": "npm run clean && tsc && swc src -d dist",
-    "clean": "rmdir /s /q typings && rmdir /s /q dist",
-    "dev": "npm run build && node dist/index.js",
     "nodemon": "nodemon",
-    "start": "node dist/index.js",
+    "start": "node src/index.js",
     "lint": "eslint src/**/*.ts",
     "format": "prettier src/**/*.ts --write",
     "prepare": "husky install",
     "test": "mocha tests/**/*.spec.ts",
-    "coverage": "del -rf coverage && nyc report",
-    "perf-tsc": "tsc --extendedDiagnostics"
+    "coverage": "rmdir /s /q coverage && nyc report",
+    "debug": "tsc --build && node ./src/index.js"
   },
   "keywords": [
     "typescript",
     "nodemon",
-    "swc",
     "esm",
     "node.js",
     "eslint",
@@ -28,8 +23,6 @@
   "license": "ISC",
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
-    "@swc/cli": "^0.1.55",
-    "@swc/core": "^1.2.120",
     "@types/chai": "^4.3.0",
     "@types/cors": "^2.8.12",
     "@types/crypto-js": "^4.1.0",
@@ -69,8 +62,6 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "ms": "^2.1.3",
-    "mysql2": "^2.3.3",
-    "node-fetch": "^3.2.0",
     "nodemailer": "^6.7.2",
     "pubsub-js": "^1.9.4",
     "sinon": "^13.0.1",
