--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mocha": "^9.0.0",
+    "@types/mongoose": "^5.11.97",
     "@types/ms": "^0.7.31",
     "@types/node": "^16.11.13",
     "@types/sinon": "^10.0.11",
@@ -61,6 +62,7 @@
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.8.2",
     "ms": "^2.1.3",
     "nodemailer": "^6.7.2",
     "pubsub-js": "^1.9.4",
