--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "main": "index.js",
   "scripts": {
     "nodemon": "nodemon",
-    "start": "node src/index.js",
-    "lint": "eslint src/**/*.ts",
-    "format": "prettier src/**/*.ts --write",
-    "prepare": "husky install",
-    "test": "mocha tests/**/*.spec.ts",
+    "start": "node api/index.js",
+    "lint": "eslint api/**/*.ts",
+    "format": "prettier api/**/*.ts --write",
+    "test": "tsc && mocha test/**/*.test.js",
     "coverage": "rmdir /s /q coverage && nyc report",
-    "debug": "tsc --build && node ./src/index.js"
+    "debug": "tsc --build && node ./api/index.js"
   },
   "keywords": [
     "typescript",
@@ -22,22 +21,21 @@
   ],
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "4.2.19",
+    "@types/mocha": "8.2.2",
+    "@types/sinon": "9.0.11",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
-    "@types/chai": "^4.3.0",
     "@types/cors": "^2.8.12",
     "@types/crypto-js": "^4.1.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/mocha": "^9.0.0",
     "@types/mongoose": "^5.11.97",
     "@types/ms": "^0.7.31",
     "@types/node": "^16.11.13",
-    "@types/sinon": "^10.0.11",
     "@types/uuid": "^8.3.4",
     "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
-    "chai": "^4.3.4",
     "eslint": "^8.5.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
@@ -45,18 +43,23 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
-    "mocha": "^9.1.3",
     "nodemon": "^2.0.15",
-    "nyc": "^15.1.0",
     "prettier": "^2.5.1",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "chai": "4.3.4",
+    "chai-as-promised": "7.1.1",
+    "chai-subset": "1.6.0",
+    "mocha": "8.4.0",
+    "nyc": "15.1.0",
+    "sinon": "9.2.4",
+    "sinon-chai": "3.7.0",
+    "ts-mocha": "8.0.0",
+    "ts-node": "9.1.1"
   },
   "dependencies": {
     "@ajar/marker": "^1.3.2",
     "@types/nodemailer": "^6.4.4",
     "@types/pubsub-js": "^1.8.3",
-    "@types/sinon": "^10.0.11",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^15.0.0",
