--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
+    "express-query-boolean": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.2",
     "ms": "^2.1.3",
