--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
     "sourceMap": true,
     "typeRoots": ["./node_modules/@types"],
     "lib": ["DOM", "ES2015", "ES2015.core", "ES2017", "ES2020", "ScriptHost", "DOM.Iterable", "ES6", "ES2019", "ES2018"],
-    "incremental": true
+    "incremental": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true
   },
   "exclude": ["node_modules"]
 }
