--- a/package.json
+++ b/package.json
@@ -65,10 +65,9 @@
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
     "express-query-boolean": "^2.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.8.2",
+    "express-validator": "^7.0.1",
+    "mongodb": "^5.6.0",
     "ms": "^2.1.3",
-    "nodemailer": "^6.7.2",
     "pubsub-js": "^1.9.4",
     "sinon": "^13.0.1",
     "uuid": "^3.4.0",
