--- a/package.json
+++ b/package.json
@@ -54,13 +54,13 @@
     "@ajar/marker": "^1.3.2",
     "@types/nodemailer": "^6.4.4",
     "@types/pubsub-js": "^1.8.3",
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
     "express-query-boolean": "^2.0.0",
     "express-validator": "^7.0.1",
-    "mongodb": "^5.6.0",
     "ms": "^2.1.3",
     "pubsub-js": "^1.9.4",
     "sinon": "^13.0.1",
